fixed body overflow

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,7 +14,7 @@ body {
   background-color: #dbdbdb;
   font-size: 1.6rem;
   font-family: 'Gantari', sans-serif;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 /* MENU */
